@@ -682,30 +682,6 @@ name|ConjunctionScorer
 argument_list|(
 name|weight
 argument_list|,
-name|disableCoord
-condition|?
-literal|1.0f
-else|:
-operator|(
-operator|(
-name|BooleanWeight
-operator|)
-name|weight
-operator|)
-operator|.
-name|coord
-argument_list|(
-name|requiredScorers
-operator|.
-name|size
-argument_list|()
-argument_list|,
-name|requiredScorers
-operator|.
-name|size
-argument_list|()
-argument_list|)
-argument_list|,
 name|requiredScorers
 argument_list|)
 block|{
@@ -808,24 +784,6 @@ operator|new
 name|ConjunctionScorer
 argument_list|(
 name|weight
-argument_list|,
-name|disableCoord
-condition|?
-literal|1.0f
-else|:
-operator|(
-operator|(
-name|BooleanWeight
-operator|)
-name|weight
-operator|)
-operator|.
-name|coord
-argument_list|(
-literal|2
-argument_list|,
-literal|2
-argument_list|)
 argument_list|,
 name|req1
 argument_list|,
