@@ -456,10 +456,19 @@ argument_list|)
 expr_stmt|;
 name|searcher
 operator|=
-operator|new
-name|IndexSearcher
+name|newSearcher
 argument_list|(
 name|littleReader
+argument_list|)
+expr_stmt|;
+comment|// this is intentionally using the baseline sim, because it compares against bigSearcher (which uses a random one)
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+operator|new
+name|DefaultSimilarity
+argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// Make big index
@@ -2018,7 +2027,7 @@ name|num
 init|=
 name|atLeast
 argument_list|(
-literal|10
+literal|20
 argument_list|)
 decl_stmt|;
 for|for
@@ -2097,6 +2106,47 @@ argument_list|,
 name|searcher
 argument_list|)
 expr_stmt|;
+comment|// baseline sim
+try|try
+block|{
+comment|// a little hackish, QueryUtils.check is too costly to do on bigSearcher in this loop.
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+name|bigSearcher
+operator|.
+name|getSimilarity
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// random sim
+name|QueryUtils
+operator|.
+name|check
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|q1
+argument_list|,
+name|searcher
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|searcher
+operator|.
+name|setSimilarity
+argument_list|(
+operator|new
+name|DefaultSimilarity
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// restore
+block|}
 name|TopFieldCollector
 name|collector
 init|=
@@ -2435,6 +2485,90 @@ argument_list|)
 index|]
 argument_list|)
 argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|qType
+operator|<
+literal|4
+condition|)
+block|{
+name|Term
+name|t1
+init|=
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+name|vals
+index|[
+name|rnd
+operator|.
+name|nextInt
+argument_list|(
+name|vals
+operator|.
+name|length
+argument_list|)
+index|]
+argument_list|)
+decl_stmt|;
+name|Term
+name|t2
+init|=
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+name|vals
+index|[
+name|rnd
+operator|.
+name|nextInt
+argument_list|(
+name|vals
+operator|.
+name|length
+argument_list|)
+index|]
+argument_list|)
+decl_stmt|;
+name|PhraseQuery
+name|pq
+init|=
+operator|new
+name|PhraseQuery
+argument_list|()
+decl_stmt|;
+name|pq
+operator|.
+name|add
+argument_list|(
+name|t1
+argument_list|)
+expr_stmt|;
+name|pq
+operator|.
+name|add
+argument_list|(
+name|t2
+argument_list|)
+expr_stmt|;
+name|pq
+operator|.
+name|setSlop
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+comment|// increase possibility of matching
+name|q
+operator|=
+name|pq
 expr_stmt|;
 block|}
 elseif|else
