@@ -608,11 +608,12 @@ specifier|final
 name|int
 name|perFieldSeed
 decl_stmt|;
-DECL|field|shouldCoord
+DECL|field|coordType
 specifier|final
-name|boolean
-name|shouldCoord
+name|int
+name|coordType
 decl_stmt|;
+comment|// 0 = no coord, 1 = coord, 2 = crazy coord
 DECL|field|shouldQueryNorm
 specifier|final
 name|boolean
@@ -633,12 +634,14 @@ operator|.
 name|nextInt
 argument_list|()
 expr_stmt|;
-name|shouldCoord
+name|coordType
 operator|=
 name|random
 operator|.
-name|nextBoolean
-argument_list|()
+name|nextInt
+argument_list|(
+literal|3
+argument_list|)
 expr_stmt|;
 name|shouldQueryNorm
 operator|=
@@ -684,7 +687,21 @@ parameter_list|)
 block|{
 if|if
 condition|(
-name|shouldCoord
+name|coordType
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+name|coordType
+operator|==
+literal|1
 condition|)
 block|{
 return|return
@@ -701,7 +718,16 @@ block|}
 else|else
 block|{
 return|return
-literal|1.0f
+name|overlap
+operator|/
+operator|(
+operator|(
+name|float
+operator|)
+name|maxOverlap
+operator|+
+literal|1
+operator|)
 return|;
 block|}
 block|}
@@ -1078,6 +1104,42 @@ name|String
 name|toString
 parameter_list|()
 block|{
+specifier|final
+name|String
+name|coordMethod
+decl_stmt|;
+if|if
+condition|(
+name|coordType
+operator|==
+literal|0
+condition|)
+block|{
+name|coordMethod
+operator|=
+literal|"no"
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|coordType
+operator|==
+literal|1
+condition|)
+block|{
+name|coordMethod
+operator|=
+literal|"yes"
+expr_stmt|;
+block|}
+else|else
+block|{
+name|coordMethod
+operator|=
+literal|"crazy"
+expr_stmt|;
+block|}
 return|return
 literal|"RandomSimilarityProvider(queryNorm="
 operator|+
@@ -1085,7 +1147,7 @@ name|shouldQueryNorm
 operator|+
 literal|",coord="
 operator|+
-name|shouldCoord
+name|coordMethod
 operator|+
 literal|"): "
 operator|+
